Updates to Jan '25 drafts

--- a/2025/2025-01-19.md
+++ b/2025/2025-01-19.md
@@ -6,7 +6,7 @@
 
 <!-- 100-word lede item. For this week, focus on TikTok ban... -->
 
-**Just to be clear before we proceed,** I am not a lawyer. On the other hand, I am also not pushing 80 years old, like most of the people running America's federal government.
+**Just to be clear,** I am not a lawyer. On the other hand, I am also not pushing 80 years old, like most of the people running America's federal government.
 
 I offer the first disclaimer in case it's useful in ascribing value (or not) to my opinions on the current fiasco surrounding Americans' access to TikTok. I offer the second so you can better understand why it's happening.
 
@@ -72,7 +72,7 @@ Frankly, TikTok in its current form probably would not comply with any such regu
 
 On SNL's live broadcast, Chappelle delivered a [17-minute opening monologue](https://www.youtube.com/watch?v=57pGarTBJrU), breaking his own previous record the for longest monologue in the show's 50-year history. That's also more than triple the typical monologue length and almost double the length of Chappelle's dress rehearsal yesterday, according to the TV-industry news site [LateNighter](https://latenighter.com/news/dave-chappelle-delivers-longest-monologue-in-snl-history/).
 
-As a firsthand witness to the rehearsal, I would add that about 80% of Chappelle's jokes in the live broadcast were different. In the early version, delivered around 8 p.m. ahead of the live broadcast at 11:30 in New York, there was no mention of Puffy Combs or Jimmy Carter -- topics he riffed about on-air at some length. And there were mentions you didn't see on TV regarding Kanye West and (more briefly) Chappelle's previous conflicts with the trans community.
+As a firsthand witness to the rehearsal, I would add that about 80% of Chappelle's jokes in the live broadcast were different. In the early version, delivered around 8 p.m. ahead of the live broadcast at 11:30 in New York, there was no mention of Puffy Combs, Luigi Mangione, or Jimmy Carter -- topics he riffed about on-air at some length. And there were mentions you didn't see on TV regarding Kanye West and (more briefly) Chappelle's previous conflicts with the trans community.
 
 To me, the big changes just underscore Chappelle's comedic genius all the more. As I see it, he either did a near-total re-working of his set at the literal eleventh hour, or he purposefully kept two versions in his head all along to avoid the broadcast material leaking.
 
