--- a/2025/2025-01-26.md
+++ b/2025/2025-01-26.md
@@ -38,12 +38,30 @@ Cutting room floor from last week...
 
 -->
 
+
+
+
+
+<!--
+
+
+- SEC suing Musk. | Judges ask SEC to explain its refusal to make crypto rules: https://www.coindesk.com/policy/2025/01/13/u-s-judges-demand-sec-explain-itself-for-rebuffing-requests-for-crypto-rules
+
+
+
+- Cops misusing facial recognition https://www.washingtonpost.com/business/interactive/2025/police-artificial-intelligence-facial-recognition/
+
+- LA prefab housing
+
+-->
+
+
 - TikTok updates. <!-- String below leftover from last week... In my defense, I will also poi'm also not pushing 80 years old, -->
 
 
 
 
-<!-- Call for regulation for all 
+<!-- Call for regulation for all
 
   TKTKT's   
 
