--- a/2025/2025-01-19.md
+++ b/2025/2025-01-19.md
@@ -46,25 +46,7 @@ Frankly, TikTok in its current form probably would not comply with any such regu
 
 - **Sony launched the main network** for its on-chain platform Soneium. The network is designed to host digital collectibles for Sony entertainment properties, as well as projects for third-party developers. ([Cointelegraph](https://cointelegraph.com/news/sony-soneium-blockchain-launch-controversy))
 
-- **More startup deals:** Latest fundraising round makes crypto bank Sygnum a unicorn: https://www.coindesk.com/business/2025/01/14/crypto-bank-sygnum-gets-unicorn-status-with-58-m-round MoonPay bought payment processor Helio [for $175 million](https://www.coindesk.com/business/2025/01/13/moon-pay-buys-crypto-payment-processor-helio-for-175-m) Meanwhile, research firm Chainalysis acquired Israeli startup Alterya [for $150 million](https://www.coindesk.com/business/2025/01/13/chainalysis-buys-israeli-fraud-detection-startup-alterya-for-150-m).
-
-
-
-
-
-
-<!--
-
-
-- SEC suing Musk. | Judges ask SEC to explain its refusal to make crypto rules: https://www.coindesk.com/policy/2025/01/13/u-s-judges-demand-sec-explain-itself-for-rebuffing-requests-for-crypto-rules
-
-
-
-- Cops misusing facial recognition https://www.washingtonpost.com/business/interactive/2025/police-artificial-intelligence-facial-recognition/
-
-- LA prefab housing
-
--->
+- **More startup deals:** Based on its latest venture funding round, the crypto bank Sygnum is [now a "unicorn,"](https://www.coindesk.com/business/2025/01/14/crypto-bank-sygnum-gets-unicorn-status-with-58-m-round) carrying a market valuation over $1 billion... MoonPay bought payment processor Helio [for $175 million](https://www.coindesk.com/business/2025/01/13/moon-pay-buys-crypto-payment-processor-helio-for-175-m)... Research firm Chainalysis acquired Israeli startup Alterya [for $150 million](https://www.coindesk.com/business/2025/01/13/chainalysis-buys-israeli-fraud-detection-startup-alterya-for-150-m).
 
 ### Odds & Ends
 
