Updating early '25 drafts

--- a/2025/2025-01-26.md
+++ b/2025/2025-01-26.md
@@ -1,169 +1,61 @@
-# tktktk
-### tktktk
+# Memecoins dampen crypto world's Trump fandom. But for how long?
+## To start his new term, President Trump delivered some goodies to industry supporters -- and an unwelcome surprise.
 
-![A phone with the TikTok app starting up, in front of a Chinese flag](https://w3w.news/img/solen-feyissa-2400.jpg)
-*Photo by Solen Feyissa via Unsplash*
+![Donald Trump speaking at a conference](https://w3w.news/img/Trump-CPAC-1920.jpg)
 
-<!--
+*Cropped photo by Gage Skidmore via Wikimedia Commons under [Creative Commons license](https://creativecommons.org/licenses/by-sa/2.0/deed.en)*
 
-100-word lede item. A possibility for next week...
+**For the crypto insiders** who did [so much](https://www.cnn.com/2024/11/17/politics/crypto-industry-donald-trump-reelection/index.html) to elect Donald Trump, the first week of his return to the White House went as expected. Mostly.
 
-DUMBDEMS: Unpack Democrats two awful ideas about crypto: 1) It's all fraud. 2) It's all going away.
+The big exception, which drew vocal criticism from Trump's political supporters and opponents alike, was the launch of memecoins right before Monday's inauguration. The offering effectively [put billions of dollars in the pockets](https://www.youtube.com/watch?v=WdoQ8bEXmLM) of both the president and First Lady overnight.
 
- -->
+Some notable responses, starting with a few from crypto entrepreneurs who vocally supported Trump during last year's presidential campaign:
+
+- **Castle Island Ventures founder Nic Carter** complained to the [Washington Post](https://wapo.st/3CrsfE6) regarding the Trump memecoins: “I was pretty dismayed by it. It cheapens his embrace of the crypto industry.”
+
+- **In remarks to Cryptopolitan,** [Carter added](https://www.msn.com/en-us/money/markets/crypto-execs-are-worried-about-trump-meme-coins/ar-AA1xGKXQ): “Call me old-fashioned, but I think presidents should focus on running the country.”
+
+- **PointsVille founder Gabor Gurbacs** [tweeted](https://x.com/gaborgurbacs/status/1881142513018572927): "Trump needs to fire his crypto advisors, from top to bottom, and replace with people who know what they are doing. The memecoins cost the US, the presidency and his family a lot of credibility and the consequences haven’t even started."
+
+- **Messari Crypto founder Ryan Selkis** echoed the call for Trump to [fire his crypto advisors](https://x.com/twobitidiot/status/1881106291445449215). He added: "They cost you a lot of $ and goodwill."
+
+- **Money manager Anthony Scaramucci,** who briefly worked in the first Trump administration but didn't support him in 2024, said in [an interview with CBS News](https://www.youtube.com/watch?v=mM9jhmCBNqg&pp=ygUgY2JzIGludGVydmlldyBhbnRob255IHNjYXJhbXVjY2k%3D) that the Trump memecoins represent "a direct conflict of interests" with Trump's duties as president.
+
+- **The Wall Street Journal's conservative editorial page** also [criticized](https://www.wsj.com/opinion/donald-trump-crypto-token-melania-securities-and-exchange-commission-8cb7abf2?st=TkFpK6&reflink=desktopwebshare_permalink) the memecoin launches at length. The paper says the tokens "are courting legal and political trouble."
 
 ### Week in Review: Jan. 19-25, 2025
 
-<!--
+**Trump's first week back as president** also contained some positives for crypto and the broader tech industry:
 
-Cutting room floor from last week...
+- **SEC moves:** Trump picked Mark Uyeda, a Republican member of the U.S. Securities and Exchange Commission, [to be acting chair](https://www.reuters.com/markets/us/trump-taps-republican-uyeda-acting-sec-chair-white-house-says-2025-01-20/) of the agency while Senate approval is pending for Paul Atkins' nomination to be permanent chair. Both are considered pro-crypto appointments, much preferable to Biden-era SEC Chair Gary Gensler. Separately, the SEC [withdrew its earlier guidance](https://www.coindesk.com/policy/2025/01/23/sec-withdraws-controversial-crypto-tax-accounting-bulletin) that banks and other public companies should mark any customers' cryptoassets on their own balance sheets.
 
-- Disney/Fubu machinations over sports streaming: https://slate.com/technology/2025/01/disney-fubo-hulu-merger-live-sports-monopoly.html
+- **Among an early wave of executive orders** from Trump was one creating a White House working group to study implementation of pro-crypto policies, including potential creation strategic government reserve of digital assets. ([CoinDesk](https://www.coindesk.com/policy/2025/01/23/trump-issues-crypto-executive-order-to-pave-u-s-digital-assets-path-reports))
 
-- https://www.nytimes.com/2025/01/16/us/politics/biden-trump-cybersecurity.html
+- **At a White House event,** Trump promoted a joint venture among OpenAI, Oracle, and SoftBank to build new infrastructure for AI technology. The project was already underway prior to the inauguration, but whatever. ([Associated Press](https://apnews.com/article/trump-ai-openai-oracle-softbank-son-altman-ellison-be261f8a8ee07a0623d4170397348c41))
 
-- Preview Trump admin. Could have unintended positive, negative effects. Relevant Politico story: https://www.politico.com/news/2025/01/14/crypto-industry-plans-remake-washington-00198012 | Forbes: https://www.forbes.com/sites/digital-assets/2025/01/14/leak-reveals-imminent-trump-game-changer-100-trillion-bitcoin-price-predicted/ | https://www.nbcnews.com/politics/donald-trump/elon-musk-jeff-bezos-mark-zuckberg-trump-inauguration-rcna187629
+- **Trump pardoned Silk Road founder Ross Ulbricht,** who had been in federal prison for more than a decade for money laundering. ([Decrypt](https://decrypt.co/302197/trump-pardons-former-silk-road-founder-and-bitcoin-icon-ross-ulbricht))
 
-- https://slate.com/technology/2025/01/mark-zuckerberg-meta-threads-destroyed-case-elon-musk-twitter.html
+**Believe it or not,** the week also saw some notable headlines that had little or nothing whatsoever to do with U.S. politics. Thank God:
 
-- Bitwise CEO says hundreds of companies may begin buying bitcoin for their corporate treasuries over the next 12-18 months: https://www.theblock.co/post/334483/bitwise-cio-corporate-bitcoin-acquisition-overlooked-megatrend
+- **Ethereum creator Vitalik Buterin** is taking [a more active role](https://news.google.com/read/CBMihgFBVV95cUxNYUtESjZLbmRNdS1vZnh4Z1lPWUdwclFsVngyTlZKYlc0cFk5b0lzVnBKOHJRXzZFM2hHY0JUNUZFUEZ2SHFGNGhDMVdCdDFjYmVzSk5VN0FMTDlQVWZXSWZ5MGtMRGVHWDZVTXVfaENla29VSmF1OVl2TWZZaVZXWHhqbUZZUQ?hl=en-US&gl=US&ceid=US%3Aen) at the Ethereum Foundation amid rising concerns that the platform is losing ground to rival Solana.
 
-- Market updates: <!-- TK. Inauguration coming up next week, etc...
+- **Google upped its investment** in OpenAI rival Anthropic by $1 billion. Anthropic's total market valuation is now close to $60 billion. ([ArsTechnica](https://arstechnica.com/ai/2025/01/google-increases-investment-in-anthropic-by-another-1-billion/))
 
-- **Wall Street marked the anniversary of listed bitcoin funds.** BlackRock's bitcoin ETF is the fastest growing ETF in history, says Bloomberg. <!-- Need link
+- **Wall Street banks are looking to sell up to $3 billion of debt** lingering on their books since Elon Musk's 2022 acquisition of Twitter. The deal has been one of the most financiallly disastrous for America's major investment firms since the 2008 financial crisis. But some prospective buyers have become more bullish on Twitter's debt lately. In part, their interest stems from hope that Musk's social network will benefit from his coziness with America's new president. ([Wall Street Journal](https://www.wsj.com/finance/banking/wall-street-banks-prepare-to-sell-billions-of-dollars-of-x-loans-c609beb1?st=TojAGa&reflink=desktopwebshare_permalink))
 
-- Dimon popping off again: https://www.coindesk.com/business/2025/01/13/jamie-dimon-still-sees-no-value-in-bitcoin
+- **Stablecoin issuer Circle acquired Hashnote,** issuer of the world’s largest tokenized money market fund. Terms were not disclosed. ([Decrypt](https://decrypt.co/302229/circle-scoops-worlds-largest-tokenized-money-market-fund-amid-sector-boom))
 
-- Blockchain as a tool for Sharia compliance. https://cointelegraph.com/news/blockchain-best-fintech-ensure-sharia-ethics-exec
+- **MicroStrategy could soon be facing** a big tax bill in the U.S. on unrealized gains in its bitcoin portfolio. ([Wall Street Journal](https://www.wsj.com/finance/currencies/microstrategy-federal-income-tax-unrealized-gains-f60b2c04?st=TzSGKb&reflink=desktopwebshare_permalink))
 
--->
+- **A big milestone to watch for:** The valuation of Ripple's XRP token, the world's third-largest cryptocurrency, is nearing the stock-market capitalization of publicly traded chipmaker AMD. Wow. ([Motley Fool](https://www.fool.com/investing/2025/01/26/will-xrp-ripple-soon-be-bigger-than-amd/))
 
-
-
-
-
-<!--
-
-
-- SEC suing Musk. | Judges ask SEC to explain its refusal to make crypto rules: https://www.coindesk.com/policy/2025/01/13/u-s-judges-demand-sec-explain-itself-for-rebuffing-requests-for-crypto-rules
-
-
-
-- Cops misusing facial recognition https://www.washingtonpost.com/business/interactive/2025/police-artificial-intelligence-facial-recognition/
-
-- LA prefab housing
-
--->
-
-
-- TikTok updates. <!-- String below leftover from last week... In my defense, I will also poi'm also not pushing 80 years old, -->
-
-
-
-
-<!-- Call for regulation for all
-
-  TKTKT's   
-
-Federal courts disagreed with that argument when TikTok's  
-
-
-
-- Verge update on Sunday restoration of service: https://www.theverge.com/2025/1/19/24347280/tiktok-ban-shutdown-ends
-
-- Reuters on the restoration: https://www.reuters.com/technology/tiktok-goes-dark-us-users-trump-says-save-tiktok-2025-01-19/
-
-<!--  
-
-America's politicians want you to know they are sorry to remove your access to TikTok. It was all a temporary misunderstanding, you see. But they had to do it to protect you from the Chinese Communist Party, because those people don't believe in freedom like we do.
-
-There is all sorts of harm they might theoretically do, or perhaps have already done, while giving you unlimited web hosting capacity to exercise your constitutionally protected First Amendment right. So we had to ignore that last part in order to prevent the first part.
-
-
-ure, you might only use it to post silly dances.  
-
-
-And they might, possibly do really bad things to our country. Yes
-
-
-Because of what these people may theoretically due to you, or perhaps have already done, albeit while giving you free web hosting for videos of you silly dancing
-
-**America's newly enacted TikTok ban** is a perfect collision of our persistent pro-democracy self-image, our our discordant but undeniably increasing antidemocratic impulses, and our paralytic day-to-day politics.
-
-The tension between America's pro-democracy self-image, rooted in events decades or centuries ago, versus the reality of its undeniably increasing antidemocratic impulses in the present day is boiling over in the newly effective TikTok ban.
-Good news is the topic is very timely. Some unintended consequences to watch concerning the TikTok ban:
-
-1. He's run Twitter into the ground.
-
-2. There are fresh concerns about his acquisition.
-
-3. Even in a best-case scenario, this would be an anticompetitive
-
-The TikTok imbroglio should be a warning on three fronts for tech world.
-
-1. The real threats to free speech are nation-states, not private moderation.
-2. We need social regulation for everyone.
-3. Educating users on infosec remains an uphill battle.
-
-- News search w recent links on McCourt's people's bid for TikTok: https://duckduckgo.com/?q=tiktok+people%27s+bid+mccourt&t=brave&iar=news&ia=news&iai=https%3A%2F%2Fwww.msn.com%2Fen-us%2Fmoney%2Frealestate%2Ftiktok-bidder-frank-mccourt-says-his-offer-is-funded-complies-with-supreme-court%2Far-AA1xol7D
-
-- CNN speculation on a possible Musk purchase: https://www.cnn.com/2025/01/14/tech/china-tiktok-sale-elon-musk-analysis/index.html
-
-- CNN showed high percentage of TikTok users who are likely to migrate to YouTube and Instagram. In other words, our oligarchic giants will win from this.
-
-- US market is very lucrative. Could ByteDance have a viable biz without it, though?
-
-- Chinese disinfo could simply increase on poorly policed US-owned networks.
-
-- What if other countries start getting skeptical about US-owned networks? https://bsky.app/profile/faineg.bsky.social/post/3lfqoiolsws2x
-
-- Feature request: Why is there no option to report foreign disinformation?
-
-- Remember, all our devices are still made in China.
-
-Slate on the situation's dumbness: https://slate.com/technology/2025/01/tiktok-ban-congress-donald-trump-joe-biden-dumb.html
-
- -->-->
-
-### Community
-
-<!-- A bunch o' leftovers...
-
- Share out on Bsky...  https://slate.com/news-and-politics/2025/01/trump-cabinet-pete-hegseth-military-defense-worst-case-scenario.html
-
-- https://unpromptedthoughts.substack.com/p/yes-we-really-do-need-another-ai | Shout out Barry's new Substack + add to your Substack recommendations for new subscribers.
-
-- https://fortune.com/crypto/2025/01/14/crypto-sector-donates-cash-and-digital-currency-for-la-fire-relief-blockdaemon-and-ripple-help-lead-effort/
-
-- MAGA-MAHA inaugural event: https://www.morningstar.com/news/accesswire/968041msn/join-us-at-the-maga-maha-crypto-leadership-conference-and-bitcoin-inaugural-ball
-
-
-Anand links...
-
-https://locusmag.com/2024/12/anand-vaidya-1976-2024/
-
-https://philosophersmag.com/large-language-models-and-the-concept-of-bullshit/
-
-https://anandvaidya.weebly.com/
-
-
- Some articles related to bizdev for w3w...
-- https://hackernoon.com/7-content-loops-to-accelerate-sustainable-product-growth?source=rss
-- https://www.ibm.com/think/insights/ai-in-journalism?ref=hackshackers.com
-
- Newsy Sunday reads...
-
-- No one buys books. https://www.elysian.press/p/no-one-buys-books
-- The case for letting Malibu burn: https://longreads.com/2018/12/04/the-case-for-letting-malibu-burn/
-
-
-https://slate.com/culture/2025/01/david-lynch-dead-movies-twin-peaks-blue-velvet.html
-
--->
+- **Billionaire Frank McCourt's Project Liberty** announced it has [hired veteran crypto executive]() Sheila Warren as CEO. Project Liberty is trying to make a "people's bid" to acquire TikTok.
 
 ### Odds & Ends
 
-- tk
+- **Some victims of the recent California wildfires** are using prefabricated homes to rebuild quickly. Design firms that originally targeted the category due to its potential for general usage are creating new solutions tailored specifically for disaster recovery. ([Bloomberg News](https://www.msn.com/en-us/money/realestate/los-angeles-fire-victims-turn-to-prefab-homes-for-quick-builds/ar-AA1xt0JF))
+
+- **It figures.** America's only crocodile population lives in the manmade waterways outside a nuclear plant in South Florida. ([PBS Terra](https://www.youtube.com/watch?v=EPeT3LMU_BQ&t=306s))
 
 _**That's it for now. Thanks for reading the newsletter today!**_
 
