Fleshing out 1 Feb draft

--- a/2025/2025-02-02.md
+++ b/2025/2025-02-02.md
@@ -1,17 +1,41 @@
-# AI is ungergoing a hype cycle. Let's act like it.
-## Utter bullshit shouldn't be necessary to discuss a technology with legitimate promise.
+# Yes, we're in an AI hype cycle.
+## DeepSeek is a helpful reminder. Let's act accordingly.
 
 ![An actual bottle of snake oil on a store shelf, along with other elixirs](https://w3w.news/img/snake-oil-1920.jpg)
 
 *Cropped photo by Wesley Fryer via Wikimedia Commons under [Creative Commons license](https://creativecommons.org/licenses/by/2.0/)*
 
-<!-- 100-word lede item. -->
+**A quick self-assessment test** for everyone in the U.S. tech industry:
 
-**Speculation runs rampant these days** regarding future improvements in the functionality of AI apps. For example, witness Anthropic CEO Dario Amodei's [dubious claim](https://gizmodo.com/anthropic-ceo-hilariously-claims-ai-will-double-human-lifespans-within-a-decade-2000554601) Thursday that AI will figure out how to double the average human lifespan within 10 years.
+- Are you three feet tall?
+- Is your skin green?
+- Are your ears pointy?
 
-<!--
+If you answered "no" to all three of these questions, I'm sorry to report that you are not Yoda. This means you cannot in fact see the future.
 
-Riff from there...
+This outcome should not be surprising, of course, as Yoda is fictional. But even if he did
+
+
+((Zuckerberg example))
+
+Build one and show it to me. Or else STFU with your predictions, Mark.
+
+
+<!-- 100-word lede item.
+
+https://decrypt.co/303970/openai-o3-mini-early-launch-first-tests-deepseek
+
+https://decrypt.co/303904/italy-bans-china-deepseek-ai-privacy-fears
+
+My initial impression of the DeepSeek news is that it underscores two important points.
+
+1) It underscores open source.
+
+2) It underscores the reality of a hype cycle. Witness Anthropic CEO Dario Amodei's [dubious claim](https://gizmodo.com/anthropic-ceo-hilariously-claims-ai-will-double-human-lifespans-within-a-decade-2000554601) Thursday that AI will figure out how to double the average human lifespan within 10 years.
+
+3) It underscores the problem of oligarchy: It's less innovative.
+
+- A rough timeline of the DeepSeek news: https://sherwood.news/markets/quick-and-dirty-timeline-of-markets-deepseek-freak/
 
 - Will bubble burst in 2025? https://www.forbes.com/sites/kolawolesamueladebayo/2025/01/20/experts-predict-the-bubble-may-burst-for-ai-in-2025/
 
@@ -40,9 +64,25 @@ Riff from there...
 
 -->
 
-- tk
-- tk
-- tk
+- Market updates: https://www.theblock.co/post/338263/bitcoin-and-us-stocks-gain-as-pce-inflation-meets-expectations | https://www.coindesk.com/markets/2025/01/28/fed-holds-rates-steady-takes-note-of-elevated-inflation | https://www.coindesk.com/markets/2025/01/31/trump-tariff-promise-snuffs-out-bitcoin-rally-for-second-consecutive-day
+
+- New "undetectable" VPN from Nord: https://decrypt.co/303909/undetectable-vpn-nord-nordwhisper
+
+- Tether annual report: https://www.theblock.co/post/338275/tether-reports-13-billion-in-yearly-net-profits-for-2024 |  Stablecoin valuation tops 200B: https://www.coindesk.com/markets/2025/01/31/stablecoin-market-surges-past-usd200b-signaling-potential-crypto-price-upswing | https://decrypt.co/303882/tether-record-shattering-profits-bitcoin-usdt
+
+- Coinbase acquires web3 adtech platform Spindl https://www.theblock.co/post/338276/coinbase-acquires-web3-adtech-platform-spindl
+
+- MSTR preferred offering coming: https://www.coindesk.com/markets/2025/01/29/institutions-are-primed-for-microstrategy-s-preferred-stock-sale-data-suggests | https://www.theblock.co/post/338259/microstrategy-sees-strong-demand-for-preferred-stock-plan-raises-563-4-million-to-fuel-more-bitcoin-purchases
+
+- Some redittors are banning X/Twitter links from their subreddits in response to Musk's post-inauguration Nazi salute. https://slate.com/technology/2025/01/reddit-bans-x-links-elon-musk-nazi-salute.html
+
+- British man jailed for brutal crypto robbery. https://decrypt.co/303832/british-men-jailed-brutal-crypto-theft
+
+- Grayscale is introducing a Dogecoin trust. https://decrypt.co/303843/bitcoin-and-ethereum-etf-issuer-grayscale-debuts-a-new-dogecoin-trust | They also want to do a Ripple ETF: https://www.coindesk.com/markets/2025/01/31/grayscale-files-sec-proposal-to-convert-xrp-trust-into-etf
+
+- Google Maps is going to change the name of the body of water between Texas and Florida to the Gulf of America. https://www.cnbc.com/2025/01/27/google-maps-to-show-gulf-of-america-after-government-updates.html
+
+- Tesla AI talk annoys wall street: https://www.theverge.com/tesla/603393/tesla-car-company-elon-musk-ai-earnings
 
 ### Community
 
@@ -50,9 +90,11 @@ Riff from there...
 
 ### Odds & Ends
 
+- Astroid has requirements for life. https://www.salon.com/2025/01/30/building-blocks-of-life-discovered-on-asteroid-bennu/?in_brief=true
+
 - Underground hydrogen could be the next phase in an energy boom. https://www.technologyreview.com/2025/01/23/1110435/geologic-hydrogen/
 
-- tk
+- **Copy editors' sense of humor hits different.** https://www.theverge.com/meta/603812/meta-warns-leakers-leaked-memo
 
 _**That's it for now. Thanks for reading the newsletter today!**_
 
