Fleshing out news summaries for 2 Feb

--- a/2025/2025-02-02.md
+++ b/2025/2025-02-02.md
@@ -64,21 +64,23 @@ My initial impression of the DeepSeek news is that it underscores two important 
 
 -->
 
-- Market updates: https://www.theblock.co/post/338263/bitcoin-and-us-stocks-gain-as-pce-inflation-meets-expectations | https://www.coindesk.com/markets/2025/01/28/fed-holds-rates-steady-takes-note-of-elevated-inflation | https://www.coindesk.com/markets/2025/01/31/trump-tariff-promise-snuffs-out-bitcoin-rally-for-second-consecutive-day
+- **Crypto prices were held in check** by mixed news concerning the outlook for U.S. inflation and [interest rates](https://www.coindesk.com/markets/2025/01/28/fed-holds-rates-steady-takes-note-of-elevated-inflation). Perhaps most concerning, the Trump administration began [implementing tariffs](https://www.wsj.com/politics/elections/trump-says-tariffs-are-coming-on-computer-chips-steel-and-more-cef9974c?st=Q7Uc7p&reflink=desktopwebshare_permalink) against three of America's largest international trading partners, with additional industry-specific levies likely to come. An escalating trade war could put upward pressure on U.S. consumer prices in the months ahead as importers pass along the cost of tariffs. That in turn would discourage interest-rate hikes friendly to crypto traders.
 
-- New "undetectable" VPN from Nord: https://decrypt.co/303909/undetectable-vpn-nord-nordwhisper
+- **As of Saturday afternoon in New York,** the global token market's valuation stood just shy of $3.5 trillion, down 3% for the week. Bitcoin and ether each suffered similar 7-day declines in percentage terms. But Solana was a notable market laggard, off 13% for the week, according to [CoinMarketCap](https://coinmarketcap.com/).
 
-- Tether annual report: https://www.theblock.co/post/338275/tether-reports-13-billion-in-yearly-net-profits-for-2024 |  Stablecoin valuation tops 200B: https://www.coindesk.com/markets/2025/01/31/stablecoin-market-surges-past-usd200b-signaling-potential-crypto-price-upswing | https://decrypt.co/303882/tether-record-shattering-profits-bitcoin-usdt
+- Tether annual report: https://www.theblock.co/post/338275/tether-reports-13-billion-in-yearly-net-profits-for-2024 |  Stablecoin valuation tops 200B: https://www.coindesk.com/markets/2025/01/31/stablecoin-market-surges-past-usd200b-signaling-potential-crypto-price-upswing | https://decrypt.co/303882/tether-record-shattering-profits-bitcoin-us
+ 
+- MSTR preferred offering coming: https://www.coindesk.com/markets/2025/01/29/institutions-are-primed-for-microstrategy-s-preferred-stock-sale-data-suggests | https://www.theblock.co/post/338259/microstrategy-sees-strong-demand-for-preferred-stock-plan-raises-563-4-million-to-fuel-more-bitcoin-purchases
+
+- Grayscale is introducing a Dogecoin trust. https://decrypt.co/303843/bitcoin-and-ethereum-etf-issuer-grayscale-debuts-a-new-dogecoin-trust | They also want to do a Ripple ETF: https://www.coindesk.com/markets/2025/01/31/grayscale-files-sec-proposal-to-convert-xrp-trust-into-etf
 
 - Coinbase acquires web3 adtech platform Spindl https://www.theblock.co/post/338276/coinbase-acquires-web3-adtech-platform-spindl
 
-- MSTR preferred offering coming: https://www.coindesk.com/markets/2025/01/29/institutions-are-primed-for-microstrategy-s-preferred-stock-sale-data-suggests | https://www.theblock.co/post/338259/microstrategy-sees-strong-demand-for-preferred-stock-plan-raises-563-4-million-to-fuel-more-bitcoin-purchases
+- New "undetectable" VPN from Nord: https://decrypt.co/303909/undetectable-vpn-nord-nordwhisper
 
 - Some redittors are banning X/Twitter links from their subreddits in response to Musk's post-inauguration Nazi salute. https://slate.com/technology/2025/01/reddit-bans-x-links-elon-musk-nazi-salute.html
 
 - British man jailed for brutal crypto robbery. https://decrypt.co/303832/british-men-jailed-brutal-crypto-theft
-
-- Grayscale is introducing a Dogecoin trust. https://decrypt.co/303843/bitcoin-and-ethereum-etf-issuer-grayscale-debuts-a-new-dogecoin-trust | They also want to do a Ripple ETF: https://www.coindesk.com/markets/2025/01/31/grayscale-files-sec-proposal-to-convert-xrp-trust-into-etf
 
 - Google Maps is going to change the name of the body of water between Texas and Florida to the Gulf of America. https://www.cnbc.com/2025/01/27/google-maps-to-show-gulf-of-america-after-government-updates.html
 
