Copyedits to news summary items

--- a/2025/2025-02-02.md
+++ b/2025/2025-02-02.md
@@ -64,9 +64,9 @@ My initial impression of the DeepSeek news is that it underscores two important 
 
 -->
 
-- **Crypto prices were held in check** by mixed news concerning the outlook for U.S. inflation and [interest rates](https://www.coindesk.com/markets/2025/01/28/fed-holds-rates-steady-takes-note-of-elevated-inflation). Perhaps most concerning, the Trump administration began [implementing tariffs](https://www.wsj.com/politics/elections/trump-says-tariffs-are-coming-on-computer-chips-steel-and-more-cef9974c?st=Q7Uc7p&reflink=desktopwebshare_permalink) against three of America's largest international trading partners, with additional industry-specific levies likely to come. An escalating trade war could put upward pressure on U.S. consumer prices in the months ahead as importers pass along the cost of tariffs. That in turn would discourage interest-rate hikes friendly to crypto traders.
+- **Crypto prices were held in check** by a mixed outlook for U.S. inflation and [interest rates](https://www.coindesk.com/markets/2025/01/28/fed-holds-rates-steady-takes-note-of-elevated-inflation). Perhaps most concerning, the Trump administration began [implementing tariffs](https://www.wsj.com/politics/elections/trump-says-tariffs-are-coming-on-computer-chips-steel-and-more-cef9974c?st=Q7Uc7p&reflink=desktopwebshare_permalink) against three of America's largest international trading partners, with additional industry-specific levies promised to come. An escalating trade war could put upward pressure on U.S. consumer prices in the months ahead as importers pass along the cost of tariffs. That in turn would effectively discourage interest-rate cuts friendly to traders of crypto, stocks, and other assets.
 
-- **As of Saturday afternoon in New York,** the global token market's valuation stood just shy of $3.5 trillion, down 3% for the week. Bitcoin and ether each suffered similar 7-day declines in percentage terms. But Solana was a notable market laggard, off 13% for the week, according to [CoinMarketCap](https://coinmarketcap.com/).
+- **As of Saturday afternoon in New York,** the global token market's valuation stood at $3.5 trillion, down more than 3% for the week. Bitcoin and ether each suffered similar 7-day declines in percentage terms. Meanwhile, Solana was a notable market laggard, off 13% for the week, according to [CoinMarketCap](https://coinmarketcap.com/).
 
 - Tether annual report: https://www.theblock.co/post/338275/tether-reports-13-billion-in-yearly-net-profits-for-2024 |  Stablecoin valuation tops 200B: https://www.coindesk.com/markets/2025/01/31/stablecoin-market-surges-past-usd200b-signaling-potential-crypto-price-upswing | https://decrypt.co/303882/tether-record-shattering-profits-bitcoin-us
  
